--- a/01_abtest_ecommerce_2022/notebooks/02_ab_test_analysis.ipynb
+++ b/01_abtest_ecommerce_2022/notebooks/02_ab_test_analysis.ipynb
@@ -152,7 +152,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Cohen's h (효과 크기): 0.0046\n"
+      "Cohen's h (효과 크기): 0.0046\n",
+      "📏 효과 크기 해석: 매우 작은 효과\n"
      ]
     }
    ],
@@ -163,7 +164,18 @@
     "p1 = count[0] / nobs[0]\n",
     "p2 = count[1] / nobs[1]\n",
     "cohen_h = 2 * (asin(sqrt(p1)) - asin(sqrt(p2)))\n",
-    "print(f\"\\nCohen's h (효과 크기): {cohen_h:.4f}\")\n"
+    "\n",
+    "if abs(cohen_h) < 0.2:\n",
+    "    interpret = '매우 작은 효과'\n",
+    "elif abs(cohen_h) < 0.5:\n",
+    "    interpret = '작은 효과'\n",
+    "elif abs(cohen_h) < 0.8:\n",
+    "    interpret = '중간 정도 효과'\n",
+    "else:\n",
+    "    interpret = '큰 효과'\n",
+    "    \n",
+    "print(f\"\\nCohen's h (효과 크기): {cohen_h:.4f}\")\n",
+    "print(f\"📏 효과 크기 해석: {interpret}\")\n"
    ]
   },
   {
@@ -207,11 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b767b92d-6a7c-4e0b-8154-205a63d31d27",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "신뢰구간(Control): [0.1187, 0.1221]\n",
+      "신뢰구간(Treatment): [0.1173, 0.1206]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "ci_low, ci_upp = sm.stats.proportion_confint(count, nobs, alpha=0.05, method='normal')\n",
+    "print(f\"신뢰구간(Control): [{ci_low[0]:.4f}, {ci_upp[0]:.4f}]\")\n",
+    "print(f\"신뢰구간(Treatment): [{ci_low[1]:.4f}, {ci_upp[1]:.4f}]\")\n"
+   ]
   }
  ],
  "metadata": {
