--- a/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
+++ b/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
@@ -2,76 +2,81 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8560750-82b3-44ae-a4f4-5ca172d61945",
+   "id": "53562987-ea0d-44b6-9e80-811ea0f4233a",
    "metadata": {},
    "source": [
-    "# 📘 A/B 테스트 최종 보고서\n",
+    "# 📘 Final Report: A/B Test Analysis\n",
     "\n",
     "---\n",
     "\n",
-    "## 1. 🎯 실험 개요\n",
+    "## 1. 🎯 Experiment Overview\n",
     "\n",
-    "- **목적:** 새 landing page가 기존보다 더 높은 전환율을 유도하는지 검증  \n",
-    "- **실험군 분할:**\n",
-    "  - Control: 기존 페이지\n",
-    "  - Treatment: 새로운 페이지\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 2. 📊 실험 데이터 요약\n",
-    "\n",
-    "| 그룹       | 전환 수 | 전체 수 | 전환율 (%) |\n",
-    "|------------|---------|---------|------------|\n",
-    "| Control    | 17,723  | 147,202 | 12.04%     |\n",
-    "| Treatment  | 17,514  | 147,280 | 11.89%     |\n",
-    "\n",
-    "> 데이터셋: Kaggle - Ecommerce AB Test (2022)\n",
+    "- **Objective:** To evaluate whether the new landing page leads to a higher conversion rate compared to the old one.\n",
+    "- **Group Allocation:**\n",
+    "- **Control:** Old landing page\n",
+    "- **Treatment:** New landing page\n",
     "\n",
     "---\n",
     "\n",
-    "## 3. 🔬 통계 분석 결과\n",
+    "## 2. 📊 Summary of Experimental Data\n",
     "\n",
-    "- **Z-Test 결과:**\n",
-    "  - Z 통계량: `1.2396`\n",
+    "| Group      | Conversions | Total Users | Conversion Rate (%) |\n",
+    "|------------|-------------|-------------|----------------------|\n",
+    "| Control    | 17,723      | 147,202     | 12.04%               |\n",
+    "| Treatment  | 17,514      | 147,280     | 11.89%               |\n",
+    "\n",
+    "> Dataset: Kaggle - Ecommerce A/B Testing (2022)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. 🔬 Statistical Analysis\n",
+    "\n",
+    "- **Z-Test (Proportion Test):**\n",
+    "  - Z-statistic: `1.2396`\n",
     "  - P-value: `0.2151`\n",
-    "  - ❌ 유의수준 0.05 기준 **차이 없음**\n",
+    "  - ❌ No statistically significant difference at α = 0.05\n",
     "\n",
     "- **Chi-Square Test:**\n",
-    "  - χ² 통계량: `1.5227`\n",
+    "  - χ²-statistic: `1.5227`\n",
     "  - P-value: `0.2172`\n",
     "\n",
-    "- **Cohen's h (효과 크기):** `0.0046`\n",
-    "  - 🟡 아주 미미한 효과 (0.2 미만)\n",
+    "- **Effect Size (Cohen's h):** `0.0046`\n",
+    "  - 🟡 Very small effect (less than 0.2)\n",
+    "\n",
+    "- **95% Confidence Intervals for Conversion Rates:**\n",
+    "  - Control: [0.1187, 0.1221]\n",
+    "  - Treatment: [0.1173, 0.1206]  \n",
+    "  → Overlapping confidence intervals indicate **no significant difference** in conversion rates between the groups.\n",
     "\n",
     "---\n",
     "\n",
-    "## 4. 📈 시각화\n",
+    "## 4. 📈 Visualizations\n",
     "\n",
-    "### ✅ 그룹별 전환율 비교  \n",
+    "### ✅ Conversion Rate by Group  \n",
     "📎 `../outputs/figures/4_group_conversion.png`\n",
     "\n",
-    "### ✅ 국가별 전환율 비교  \n",
+    "### ✅ Conversion Rate by Country and Group  \n",
     "📎 `../outputs/figures/5_country_group_conversion.png`\n",
     "\n",
-    "### ✅ Z-Test 결과 시각화  \n",
+    "### ✅ Z-Test Result Visualization  \n",
     "📎 `../outputs/figures/7_conversion_rate_comparison.png`\n",
     "\n",
     "---\n",
     "\n",
-    "## 5. 🧠 결론 및 인사이트\n",
+    "## 5. 🧠 Conclusion & Insights\n",
     "\n",
-    "- ✅ Control 그룹의 전환율(12.04%)이 Treatment(11.89%)보다 소폭 높았음\n",
-    "- ❌ 그러나 **p-value가 0.2151로 유의수준 0.05보다 크므로** 통계적으로 유의미한 차이는 없음\n",
-    "- 🎯 결론: **새로운 페이지가 기존 대비 성능 향상이 확실하지 않음**  \n",
-    "→ 당장은 기존 페이지 유지 추천\n",
+    "- ✅ The control group showed a slightly higher conversion rate (12.04%) than the treatment group (11.89%).\n",
+    "- ❌ However, since the **p-value is 0.2151**, there is **no statistically significant difference** between the two groups.\n",
+    "- 🎯 **Conclusion:** The new landing page does not show a clear performance improvement over the old one.  \n",
+    "→ It is recommended to **continue using the current page for now**.\n",
     "\n",
     "---\n",
     "\n",
-    "## 6. 📌 제안 사항\n",
+    "## 6. 📌 Recommendations\n",
     "\n",
-    "- 체류 시간 등 다른 KPI를 포함한 후속 실험 필요\n",
-    "- 국가별로 사용자 반응 차이가 있는지 subgroup A/B 테스트 진행 제안\n",
-    "- UI/UX 요소 외에 다른 전환 유도 요소(추천 상품, CTA 문구 등) 테스트 권장\n"
+    "- Run follow-up experiments including additional KPIs such as time on page or scroll depth.\n",
+    "- Consider subgroup A/B testing by country or device type to detect regional effects.\n",
+    "- Experiment with other UX/UI elements (e.g., CTA wording, product recommendations) to potentially improve conversion.\n"
    ]
   },
   {
