report and correct typos

--- a/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
+++ b/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53562987-ea0d-44b6-9e80-811ea0f4233a",
+   "id": "cf474ffc-f575-4e7b-9a01-8a1728320165",
    "metadata": {},
    "source": [
     "# 📘 Final Report: A/B Test Analysis\n",
     "\n",
     "---\n",
     "\n",
-    "## 1. 🎯 Experiment Overview\n",
+    "\n",
+    "🧾 Supplementary Document for Master's Application\n",
+    "\n",
+    "This report is submitted as a supplementary document to support my early application for the Master's program.\n",
+    "\n",
+    "Although I have experience in applied machine learning using `scikit-learn`, I wanted to strengthen my foundation in classical statistics through this project.  \n",
+    "By conducting an end-to-end A/B test, I aimed to better understand the statistical thinking behind real-world experimentation — including hypothesis testing, confidence intervals, and effect size analysis.\n",
+    "\n",
+    "This project reflects my initiative to grow beyond libraries and deepen my reasoning skills with data.\n",
+    "\n",
+    "> 💻 Code available on [GitHub](https://github.com/Junemo-hub/ab-test-experiment-design/tree/main/01_abtest_ecommerce_2022)\n",
+    "\n",
+    "## 1. Experiment Overview\n",
     "\n",
     "- **Objective:** To evaluate whether the new landing page leads to a higher conversion rate compared to the old one.\n",
     "- **Group Allocation:**\n",
-    "- **Control:** Old landing page\n",
-    "- **Treatment:** New landing page\n",
+    "  Control: Old landing page\n",
+    "  Treatment: New landing page\n",
     "\n",
     "---\n",
     "\n",
@@ -22,51 +34,54 @@
     "\n",
     "| Group      | Conversions | Total Users | Conversion Rate (%) |\n",
     "|------------|-------------|-------------|----------------------|\n",
-    "| Control    | 17,723      | 147,202     | 12.04%               |\n",
-    "| Treatment  | 17,514      | 147,280     | 11.89%               |\n",
+    "| Control    | 17,489      | 145,274     | 12.04%               |\n",
+    "| Treatment  | 17,264      | 145,315     | 11.89%               |\n",
     "\n",
-    "> Dataset: Kaggle - Ecommerce A/B Testing (2022)\n",
+    "> Dataset: [Kaggle - Ecommerce A/B Testing (2022)](https://www.kaggle.com/datasets/putdejudomthai/ecommerce-ab-testing-2022-dataset1/data)\n",
     "\n",
     "---\n",
     "\n",
     "## 3. 🔬 Statistical Analysis\n",
     "\n",
     "- **Z-Test (Proportion Test):**\n",
-    "  - Z-statistic: `1.2396`\n",
-    "  - P-value: `0.2151`\n",
+    "  - Z-statistic: `1.3143`\n",
+    "  - P-value: `0.1887`\n",
     "  - ❌ No statistically significant difference at α = 0.05\n",
     "\n",
     "- **Chi-Square Test:**\n",
-    "  - χ²-statistic: `1.5227`\n",
-    "  - P-value: `0.2172`\n",
+    "  - χ²-statistic: `1.7125`\n",
+    "  - P-value: `0.1907`\n",
     "\n",
-    "- **Effect Size (Cohen's h):** `0.0046`\n",
-    "  - 🟡 Very small effect (less than 0.2)\n",
+    "- **Effect Size (Cohen's h):** `0.0049`\n",
+    "  - 🟡 Very small effect (less than 0.2)              \n",
     "\n",
     "- **95% Confidence Intervals for Conversion Rates:**\n",
     "  - Control: [0.1187, 0.1221]\n",
-    "  - Treatment: [0.1173, 0.1206]  \n",
-    "  → Overlapping confidence intervals indicate **no significant difference** in conversion rates between the groups.\n",
+    "  - Treatment: [0.1171, 0.1205]  \n",
+    "  → Overlapping confidence intervals indicate **no significant difference** in conversion rates between the groups.  \n",
     "\n",
     "---\n",
     "\n",
-    "## 4. 📈 Visualizations\n",
+    "## 4. Visualizations\n",
     "\n",
     "### ✅ Conversion Rate by Group  \n",
-    "📎 `../outputs/figures/4_group_conversion.png`\n",
+    "<img src=\"../outputs/figures/1_group_conversion.png\" width=\"300\"/>\n",
     "\n",
     "### ✅ Conversion Rate by Country and Group  \n",
-    "📎 `../outputs/figures/5_country_group_conversion.png`\n",
+    "<img src=\"../outputs/figures/2_country_group_conv.png\" width=\"300\"/>\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "### ✅ Z-Test Result Visualization  \n",
-    "📎 `../outputs/figures/7_conversion_rate_comparison.png`\n",
+    "<img src=\"../outputs/figures/3_conversion_rate_comparison.png\" width=\"300\"/>\n",
     "\n",
     "---\n",
     "\n",
-    "## 5. 🧠 Conclusion & Insights\n",
+    "## 5. Conclusion & Insights\n",
     "\n",
     "- ✅ The control group showed a slightly higher conversion rate (12.04%) than the treatment group (11.89%).\n",
-    "- ❌ However, since the **p-value is 0.2151**, there is **no statistically significant difference** between the two groups.\n",
+    "- ❌ However, since the **p-value is 0.1887**, there is **no statistically significant difference** between the two groups.\n",
     "- 🎯 **Conclusion:** The new landing page does not show a clear performance improvement over the old one.  \n",
     "→ It is recommended to **continue using the current page for now**.\n",
     "\n",
@@ -80,11 +95,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20dfab34-75dc-43af-a7c9-3f4e75b2dcca",
+   "cell_type": "markdown",
+   "id": "6d95fb66-1a77-4bc1-a8b6-ad4b2774ffe8",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
