--- a/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
+++ b/01_abtest_ecommerce_2022/notebooks/03_report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf474ffc-f575-4e7b-9a01-8a1728320165",
+   "id": "8f1aae79-7de0-47a2-b5e8-fb10743d5737",
    "metadata": {},
    "source": [
     "# 📘 Final Report: A/B Test Analysis\n",
@@ -12,12 +12,11 @@
     "\n",
     "🧾 Supplementary Document for Master's Application\n",
     "\n",
-    "This report is submitted as a supplementary document to support my early application for the Master's program.\n",
+    "I submitted this report to accompany my early application, leveraging the early deadline to demonstrate both my preparedness and sustained commitment to growth in data science.\n",
     "\n",
-    "Although I have experience in applied machine learning using `scikit-learn`, I wanted to strengthen my foundation in classical statistics through this project.  \n",
-    "By conducting an end-to-end A/B test, I aimed to better understand the statistical thinking behind real-world experimentation — including hypothesis testing, confidence intervals, and effect size analysis.\n",
+    "While I’ve worked with applied machine learning using tools like scikit-learn, I took this opportunity to revisit core concepts in A/B testing and statistics. The project helped me solidify essential topics like hypothesis testing, confidence intervals, and practical experiment design—skills that are highly relevant in real-world data science work.\n",
     "\n",
-    "This project reflects my initiative to grow beyond libraries and deepen my reasoning skills with data.\n",
+    "This project reflects my ongoing commitment to developing both the technical and analytical mindset needed to succeed in a professional data science environment.\n",
     "\n",
     "> 💻 Code available on [GitHub](https://github.com/Junemo-hub/ab-test-experiment-design/tree/main/01_abtest_ecommerce_2022)\n",
     "\n",
